# loopweave

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml  plan.md
backend/analytics/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/analytics/strategies/: __init__.py  death_cross.py  golden_cross.py  rsi_overbought.py  rsi_oversold.py  sma_20.py
backend/analytics/utils/: chart_patterns.py  company_enrichment.py  db.py  plot_patterns.py  sync.py  ta_metrics.py
backend/api/: .dockerignore  Dockerfile  main.py  pyproject.toml  types.py
backend/api/utils/: bigquery.py  patterns.py  stocks.py  timeseries.py
frontend/: .dockerignore  Dockerfile  next.config.js  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/account/: page.tsx
frontend/app/api/auth/login/: route.ts
frontend/app/api/auth/logout/: route.ts
frontend/app/api/auth/status/: route.ts
frontend/app/login/: page.tsx
frontend/app/micro/[userUuid]/: page.tsx
frontend/app/subscribe/: page.tsx
frontend/components/: MetricDropdown.tsx  PlotlyChart.tsx  ThemeProvider.tsx
frontend/lib/: firebase-auth.ts  firebase.ts  firestore.ts
frontend/types/: index.ts  react-plotly.d.ts  styled.d.ts
frontend/utils/: custom-plotly.js  theme.ts
scripts/: BIGQUERY_SCHEMA_VERIFICATION.md  deploy-analytics.sh  deploy-api.sh  deploy-frontend.sh  pyproject.toml  seed-stock-data.py  setup-bigquery.sh  setup-scheduler.sh
terraform/: BIGQUERY_SCHEMA_VERIFICATION.md  README.md  apis.tf  bigquery.tf  cloudrun-analytics.tf  cloudrun-api.tf  cloudrun-frontend.tf  cloudscheduler.tf  cloudsql.tf  load-env.sh  outputs.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf
terraform/sql/: 001_create_tables.sql  002_create_indexes.sql
(+8 files in other folders)
