[project]
name = "loopweave-scripts"
version = "0.1.0"
description = "LoopWeave utility scripts"
requires-python = ">=3.11"
dependencies = [
    "httpx==0.25.2",
    "google-cloud-bigquery==3.13.0",
    "python-dotenv==1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

